--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ canvas {
 /* 반응형 디자인 */
 @media (max-width: 800px) {
   .container {
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
   }
   .controls-panel {
